[project]
name = "ccctail"
version = "0.1.4"
description = "Claude Code Cache Tail - View Claude Code Cache Hits and Misses"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=6.0.0",
    "click>=8.0.0",
]

[project.scripts]
ccctail = "ccctail.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccctail"]
